[package]
name = "rippled-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rippled_bridge"
path = "src/lib.rs"
#crate-type = ["dylib", "staticlib"]

[dependencies]
cxx = "1.0.94"
# TODO: This will break for a new developer who doesn't structure github clones in a compatible manner.
# This needs to point to a published crate once we publish `xrpl-rust-sdk-core`
"xrpl-rust-sdk-core" = { path = "../../../../xrpl-rust-sdk/xrpl-rust-sdk-core" }

[build-dependencies]
cxx-build = "1.0.94"
whoami = "1.4.0"